<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dip"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/action1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="毫秒转时间"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input_ms_title"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/str_unix_time_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action1" />

    <EditText
        android:id="@+id/input_ms_edittext"
        android:layout_width="190dip"
        android:layout_height="30dip"
        android:background="@android:color/holo_green_light"
        android:inputType="number"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/input_ms_title"
        app:layout_constraintTop_toBottomOf="@+id/action1" />

    <CheckBox
        android:id="@+id/switch_ms_and_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/str_time_unit_ms"
        app:layout_constraintLeft_toRightOf="@+id/input_ms_edittext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action1" />

    <Button
        android:id="@+id/unit_to_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_calc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_ms_edittext" />

    <TextView
        android:id="@+id/show_unit_to_date_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:text="@string/str_date_string"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_to_date_time" />


    <ImageView
        android:id="@+id/divider_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/btn_star"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_unit_to_date_string" />


    <TextView
        android:id="@+id/action2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="时间转毫秒"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_line" />

    <TextView
        android:id="@+id/date_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:text="@string/str_time_format"
        app:layout_constraintTop_toBottomOf="@+id/action2" />

    <TextView
        android:id="@+id/input_date_title"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
        android:text="@string/str_date_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_type" />

    <EditText
        android:id="@+id/input_date_edit_text"
        android:layout_width="260dip"
        android:layout_height="30dip"
        android:background="@android:color/holo_green_light"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/input_date_title"
        app:layout_constraintTop_toBottomOf="@+id/date_type" />


    <Button
        android:id="@+id/date_to_unit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_calc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date_edit_text" />

    <TextView
        android:id="@+id/show_date_to_unit_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:text="@string/str_unit_time_string"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_to_unit_time" />

</android.support.constraint.ConstraintLayout>